Thu Sep 16 11:06:09 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

       * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.cpp:
       * bin/ciao_tests.lst:
       Add ThreeComp test to test suite.

Thu Sep 16 10:03:09 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/ThreeComp:
        * connectors/ami4ccm/tests/ThreeComp/Sender:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.h:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.idl:
        * connectors/ami4ccm/tests/ThreeComp/descriptors:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/ThreeComp/Receiver:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver.idl:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver_exec.h:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Base:
        * connectors/ami4ccm/tests/ThreeComp/Base/ThreeComp.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Base/ThreeComp.idl:
        * connectors/ami4ccm/tests/ThreeComp/README.txt:
        * connectors/ami4ccm/tests/ThreeComp/Master:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master.idl:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master_exec.h:
        AMI4CCM test with 3 components, with 'uses multiple' and 'provides' in one component.
